src/orin.h

typedef struct {
    unsigned char r;
    unsigned char g;
    unsigned char b;
    unsigned char a;
} Color;
typedef struct {
    float x;
    float y;
} Vector2f;
typedef struct {
    float x;
    float y;
    float z;
} Vector3f;
typedef struct {
    float x;
    float y;
    float z;
    float w;
} Vector4f;
typedef struct {
    int x;
    int y;
} Vector2i;
typedef struct {
    int x;
    int y;
    int z;
} Vector3i;
typedef struct {
    int x;
    int y;
    int z;
    int w;
} Vector4i;
typedef struct {
    union {
        struct {
            float m00, m01, m02, m03;
            float m10, m11, m12, m13;
            float m20, m21, m22, m23;
            float m30, m31, m32, m33;
        };
        float data[16];
    };
} Matrix4f;
typedef struct {
    unsigned int id;
} Shader;
typedef struct {
    Vector2f position;
    Vector2f uv;
    Vector2f normals;
    Color color;
} Vertex;
typedef struct {
    unsigned int vao;
    unsigned int vbo;
    unsigned int ebo;
    Vertex *vertices;
    unsigned int *indices;
    size_t vertexCount;
    size_t indexCount;
} Model;
Shader *CreateShader(const char *vertexFile, const char *fragmentFile);
Shader *CreateDefaultShader();
void DestroyShader(Shader *shader);
Model *CreateModel(Vertex vertices[], size_t vertexCount, unsigned int indices[], size_t indexCount);
void DestroyModel(Model *model);
void SetColor(Color color);
void DrawModel(Model *model, Matrix4f *transform);
void SetUniform1f(Shader *shader, const char *name, float value);
void SetUniform2f(Shader *shader, const char *name, Vector2f value);
void SetUniform3f(Shader *shader, const char *name, Vector3f value);
void SetUniform4f(Shader *shader, const char *name, Vector4f value);
void SetUniform1i(Shader *shader, const char *name, int value);
void SetUniform2i(Shader *shader, const char *name, Vector2i value);
void SetUniform3i(Shader *shader, const char *name, Vector3i value);
void SetUniform4i(Shader *shader, const char *name, Vector4i value);
void SetUniformMatrix4f(Shader *shader, const char *name, Matrix4f *value);
int IsKeyDown(int key);
int IsKeyReleased(int key);
int IsButtonDown(int button);
int IsButtonReleased(int button);
Vector2f GetMousePosition();
Vector2f GetMouseDelta();