python/orin.py

    
    vertex_file_path = os.path.join(current_directory, vertex_file)
    fragment_file_path = os.path.join(current_directory, fragment_file)

    vertex_file_bytes = vertex_file_path.encode("utf-8")
    fragment_file_bytes = fragment_file_path.encode("utf-8")
    
    return liborin.CreateShader(vertex_file_bytes, fragment_file_bytes)

liborin.CreateDefaultShader.argtypes = None
liborin.CreateDefaultShader.restype = ctypes.POINTER(Shader)
def CreateDefaultShader():
    return liborin.CreateDefaultShader()

liborin.DestroyShader.argtypes = [ctypes.POINTER(Shader)]
liborin.DestroyShader.restype = None
def DestroyShader(shader: Shader):
    liborin.DestroyShader(shader)

liborin.CreateModel.argtypes = [
    ctypes.POINTER(Vertex),
    ctypes.c_size_t,
    ctypes.POINTER(ctypes.c_uint),
    ctypes.c_size_t
]
liborin.CreateModel.restype = ctypes.POINTER(Model)
def CreateModel(vertices: list, indices: list):
    vertex_array = (Vertex * len(vertices))(*vertices)
    index_array = (ctypes.c_uint * len(indices))(*indices)

    return liborin.CreateModel(vertex_array, len(vertices), index_array, len(indices))

liborin.DestroyModel.argtypes = [ctypes.POINTER(Model)]
liborin.DestroyModel.restype = None
def DestroyModel(model: Model):
    liborin.DestroyModel(model)

liborin.SetColor.argtypes = [Color]
liborin.SetColor.restype = None
def SetColor(color: Color):
    liborin.SetColor(color)

liborin.DrawModel.argtypes = [ctypes.POINTER(Model), ctypes.POINTER(Matrix4f)]
liborin.DrawModel.restype = None
def DrawModel(model: Model, transform: Matrix4f):
    liborin.DrawModel(model, transform)

liborin.SetUniform1f.argtypes = [ctypes.POINTER(Shader), ctypes.c_char_p, ctypes.c_float]
liborin.SetUniform1f.restype = None
def SetUniform1f(shader: Shader, uniform_name: str, value: float):
    liborin.SetUniform1f(shader, uniform_name.encode("utf-8"), value)

liborin.SetUniform2f.argtypes = [ctypes.POINTER(Shader), ctypes.c_char_p, Vector2f]
liborin.SetUniform2f.restype = None
def SetUniform2f(shader: Shader, uniform_name: str, value: Vector2f):
    liborin.SetUniform2f(shader, uniform_name.encode("utf-8"), value)

liborin.SetUniform3f.argtypes = [ctypes.POINTER(Shader), ctypes.c_char_p, Vector3f]
liborin.SetUniform3f.restype = None
def SetUniform3f(shader: Shader, uniform_name: str, value: Vector3f):
    liborin.SetUniform3f(shader, uniform_name.encode("utf-8"), value)

liborin.SetUniform4f.argtypes = [ctypes.POINTER(Shader), ctypes.c_char_p, Vector4f]
liborin.SetUniform4f.restype = None
def SetUniform4f(shader: Shader, uniform_name: str, value: Vector4f):
    liborin.SetUniform4f(shader, uniform_name.encode("utf-8"), value)

liborin.SetUniform1i.argtypes = [ctypes.POINTER(Shader), ctypes.c_char_p, ctypes.c_int]
liborin.SetUniform1i.restype = None
def SetUniform1i(shader: Shader, uniform_name: str, value: int):
    liborin.SetUniform1i(shader, uniform_name.encode("utf-8"), value)

liborin.SetUniform2i.argtypes = [ctypes.POINTER(Shader), ctypes.c_char_p, Vector2i]
liborin.SetUniform2i.restype = None
def SetUniform2i(shader: Shader, uniform_name: str, value: Vector2i):
    liborin.SetUniform2i(shader, uniform_name.encode("utf-8"), value)

liborin.SetUniform3i.argtypes = [ctypes.POINTER(Shader), ctypes.c_char_p, Vector3i]
liborin.SetUniform3i.restype = None
def SetUniform3i(shader: Shader, uniform_name: str, value: Vector3i):
    liborin.SetUniform3i(shader, uniform_name.encode("utf-8"), value)

liborin.SetUniform4i.argtypes = [ctypes.POINTER(Shader), ctypes.c_char_p, Vector4i]
liborin.SetUniform4i.restype = None
def SetUniform4i(shader: Shader, uniform_name: str, value: Vector4i):
    liborin.SetUniform4i(shader, uniform_name.encode("utf-8"), value)

liborin.SetUniformMatrix4f.argtypes = [ctypes.POINTER(Shader), ctypes.c_char_p, ctypes.POINTER(Shader)]
liborin.SetUniformMatrix4f.restype = None
def SetUniformMatrix4f(shader: Shader, uniform_name: str, value: Matrix4f):
    liborin.SetUniformMatrix4f(shader, uniform_name.encode("utf-8"), value)

liborin.IsKeyDown.argtypes = [ctypes.c_int]
liborin.IsKeyDown.restype = ctypes.c_int
def IsKeyDown(key: int):
    return liborin.IsKeyDown(key)

liborin.IsKeyReleased.argtypes = [ctypes.c_int]
liborin.IsKeyReleased.restype = ctypes.c_int
def IsKeyReleased(key: int):
    return liborin.IsKeyReleased(key)

liborin.IsButtonDown.argtypes = [ctypes.c_int]
liborin.IsButtonDown.restype = ctypes.c_int
def IsButtonDown(button: int):
    return liborin.IsButtonDown(button)

liborin.IsButtonReleased.argtypes = [ctypes.c_int]
liborin.IsButtonReleased.restype = ctypes.c_int
def IsButtonReleased(button: int):
    return liborin.IsButtonReleased(button)

liborin.GetMousePosition.argtypes = None
liborin.GetMousePosition.restype = Vector2f
def GetMousePosition() -> Vector2f:
    return liborin.GetMousePosition()

liborin.GetMouseDelta.argtypes = None
liborin.GetMouseDelta.restype = Vector2f
def GetMouseDelta() -> Vector2f:
    return liborin.GetMouseDelta()

liborin.IdentityMatrix4f.argtypes = None
liborin.IdentityMatrix4f.restype = Matrix4f
def IdentityMatrix4f():
    return liborin.IdentityMatrix4f()
